--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "php": ">=5.6.0",
         "composer/installers": "~1.0",
         "pfefferle/wordpress-ostatus": "*",
-        "pfefferle/wordpress-webfinger": "*"
+        "pfefferle/wordpress-webfinger": "*",
+        "pfefferle/wordpress-salmon": "*"
     },
     "license": "MIT",
     "authors": [
